# lab3_ArithmeticExpression

./: CMakeLists.txt
include/: AVLMap.h  AVLTree.h  Expression.h  IMap.h  LexAutomat.h  Pascal.h  Postfixer.h  ProgVisiotr.h  SyntAutomat.h  TQueue.h  TStack.h  TreeExpression.h  Word.h
parser/: CMakeLists.txt
parser/grammar/: Pascal.g4
samples/: CMakeLists.txt  sample.cpp
src/: Expression.cpp  LexAutomat.cpp  Postfixer.cpp  SyntAutomat.cpp  Word.cpp
test/: CMakeLists.txt  test_expression.cpp  test_main.cpp  test_tqueue.cpp  test_tstack.cpp
